objects/SBQQ__ProcessInput__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProcessInputHelp</customHelpPage>
    <description>Input into a quote process. Information collected by inputs can be used to drive product selection and configuration.</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Titanium Dioxide (TiO2)</fullName>
                </value>
                <value>
                    <fullName>Mineral Sands</fullName>
                </value>
                <value>
                    <fullName>Ultrafine and Specialty Titanium Dioxide</fullName>
                </value>
                <value>
                    <fullName>Titanium Chemicals</fullName>
                </value>
                <value>
                    <fullName>Other Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                    <default>true</default>
                    <label>Enterprise</label>
                </value>
                <value>
                    <fullName>Middle Market</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excavator_Type__c</fullName>
        <label>Excavator Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mini Excavators</fullName>
                </value>
                <value>
                    <fullName>Small Excavators</fullName>
                </value>
                <value>
                    <fullName>Medium Excavators</fullName>
                </value>
                <value>
                    <fullName>Large Excavators</fullName>
                </value>
                <value>
                    <fullName>Demolition Excavators</fullName>
                </value>
                <value>
                    <fullName>Frontless Excavators</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gross_Power__c</fullName>
        <label>Gross Power</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Noise_Canceling__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Noise Canceling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Application__c</fullName>
        <label>Primary Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>General Construction</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>Road Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Segment__c</fullName>
        <label>Product Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Energy, Utilities, and Process Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excavators</fullName>
                </value>
                <value>
                    <fullName>Skid Steer</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Lease__c</fullName>
        <description>Select to Purchase or Lease Equipment</description>
        <label>Purchase/Lease</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                    <default>true</default>
                    <label>Purchase</label>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this process input is active.</description>
        <inlineHelpText>Select the checkbox to activate this process input.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BinaryChoice__c</fullName>
        <label>Binary Choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <description>Indicates which Process Input conditions must be met.</description>
        <inlineHelpText>Indicate which Process Input conditions must be met.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultField__c</fullName>
        <description>Quote field that sources default value for this input.</description>
        <inlineHelpText>Quote field that sources default value for this input.</inlineHelpText>
        <label>Default Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To Country</fullName>
                </value>
                <value>
                    <fullName>Ship To Country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The order that the process input is displayed.</description>
        <inlineHelpText>Enter the order that the process input should be displayed.</inlineHelpText>
        <label>Display Order</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__InputField__c</fullName>
        <description>The API name for the field that accepts the user entry.</description>
        <inlineHelpText>Select the API name for the field that accepts the user entry.</inlineHelpText>
        <label>Input Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BinaryChoice__c</fullName>
                </value>
                <value>
                    <fullName>IntegerInput__c</fullName>
                </value>
                <value>
                    <fullName>Solution__c</fullName>
                </value>
                <value>
                    <fullName>Business_Segment__c</fullName>
                </value>
                <value>
                    <fullName>Noise_Canceling__c</fullName>
                </value>
                <value>
                    <fullName>Gross_Power__c</fullName>
                </value>
                <value>
                    <fullName>Excavator_Type__c</fullName>
                </value>
                <value>
                    <fullName>Primary_Application__c</fullName>
                </value>
                <value>
                    <fullName>Product_Type__c</fullName>
                </value>
                <value>
                    <fullName>Product_Segment__c</fullName>
                </value>
                <value>
                    <fullName>Sub_Sector__c</fullName>
                </value>
                <value>
                    <fullName>Type__c</fullName>
                </value>
                <value>
                    <fullName>Application__c</fullName>
                </value>
                <value>
                    <fullName>Purchase_Lease__c</fullName>
                </value>
                <value>
                    <fullName>Term__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__IntegerInput__c</fullName>
        <inlineHelpText>Enter a numerical value.</inlineHelpText>
        <label>Integer Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Label__c</fullName>
        <description>Label for this filter.</description>
        <inlineHelpText>The text that you want displayed to the user in the prompt.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator used when comparing the Input Field entry with the Product Field.</description>
        <inlineHelpText>Select the operator to use when comparing the Input Field entry with the Product Field.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProcessInputCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Input Condition</label>
        <referenceTo>SBQQ__ProcessInputCondition__c</referenceTo>
        <relationshipLabel>Process Inputs</relationshipLabel>
        <relationshipName>ProcessInputCondition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductField__c</fullName>
        <description>Field on Product object used in filtering products that match this input.</description>
        <inlineHelpText>Field on Product object used in filtering products that match this input.</inlineHelpText>
        <label>Product Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Name</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Guided_Selling__c</fullName>
                </value>
                <value>
                    <fullName>excavator_type__c</fullName>
                </value>
                <value>
                    <fullName>primary_application__c</fullName>
                </value>
                <value>
                    <fullName>product_type__c</fullName>
                </value>
                <value>
                    <fullName>sae_gross_power_hp__c</fullName>
                </value>
                <value>
                    <fullName>Product_Segment__c</fullName>
                </value>
                <value>
                    <fullName>Sub_Sector__c</fullName>
                </value>
                <value>
                    <fullName>Type__c</fullName>
                </value>
                <value>
                    <fullName>Application__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteProcess__c</fullName>
        <description>Quote process that owns the input.</description>
        <inlineHelpText>Quote process that owns the input.</inlineHelpText>
        <label>Quote Process</label>
        <referenceTo>SBQQ__QuoteProcess__c</referenceTo>
        <relationshipLabel>Process Inputs</relationshipLabel>
        <relationshipName>Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kits</fullName>
                    <default>true</default>
                    <label>Kits</label>
                </value>
                <value>
                    <fullName>Turbines</fullName>
                </value>
                <value>
                    <fullName>Batteries</fullName>
                </value>
                <value>
                    <fullName>Battery Tools</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Software Licenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <label>Sub-Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oil Field Services and Equipment</fullName>
                </value>
                <value>
                    <fullName>Downstream</fullName>
                </value>
                <value>
                    <fullName>Process Manufacturing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engine Oils</fullName>
                </value>
                <value>
                    <fullName>Greases</fullName>
                </value>
                <value>
                    <fullName>Synthetics</fullName>
                </value>
                <value>
                    <fullName>Gear Oils</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Process Input</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>SBQQ__Active__c</columns>
        <columns>NAME</columns>
        <columns>SBQQ__InputField__c</columns>
        <columns>SBQQ__ProductField__c</columns>
        <columns>SBQQ__Operator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__ProductFieldAndOperatorSet</fullName>
        <active>true</active>
        <description>If a Product Field is defined, an Operator must also be defined.</description>
        <errorConditionFormula>OR(AND(!ISBLANK(TEXT(SBQQ__ProductField__c)),(ISBLANK(TEXT(SBQQ__Operator__c)))),AND(ISBLANK(TEXT(SBQQ__ProductField__c)),(!ISBLANK(TEXT(SBQQ__Operator__c)))))</errorConditionFormula>
        <errorMessage>Both Product Field and Operator must be set if either are set.</errorMessage>
    </validationRules>
</CustomObject>